<resources>
    <string name="app_name">Today</string>

    <string name="empty"> </string>

    <!-- toolbar -->
    <string name="open">打开</string>
    <string name="close">关闭</string>

    <!-- login -->
    <string name="login">login</string>
    <string name="login_cn">登录</string>
    <string name="login_alert">Don\'t have an account?</string>
    <string name="login_alert_cn">还没有账号？</string>

    <!-- reg -->
    <string name="register">register</string>
    <string name="register_cn">注册</string>

    <string name="username">username</string>
    <string name="password">password</string>
    <string name="password_cn">密码</string>
    <string name="email">email</string>
    <string name="email_cn">邮箱</string>

    <!-- menu -->
    <string name="home_cn">主页</string>
    <string name="calendar_cn">时间表</string>
    <string name="overview_cn">概览</string>
    <string name="group_cn">分组</string>
    <string name="timeline_cn">时间轴</string>
    <string name="setting_cn">设置</string>

    <!-- home -->
    <string name="morning">早上好</string>
    <string name="afternoon">下午好</string>
    <string name="evening">晚上好</string>

    <!-- group -->
    <string name="food">食物</string>
    <string name="work">工作</string>
    <string name="outside">外出</string>
    <string name="vacation">假期</string>

    <!-- setting -->
    <string name="general_cn">常用</string>
    <string name="nickname_cn">昵称</string>
    <string name="phone_cn">电话号码</string>
    <string name="notification_cn">提醒</string>

    <!-- empty view -->
    <string name="empty_data">列表为空，点击刷新数据</string>
    <string name="error_data">刷新出错，点击再次刷新</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
