<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:orientation="vertical">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="56dp"
        android:background="@mipmap/login_sign"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:text="@string/login"
        android:textColor="#fff"
        android:textSize="24sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:layout_marginTop="32dp"
        android:background="#33ffffff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:padding="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_login_username"
                style="@style/TextInput.White"
                app:hintTextAppearance="@style/TextInputHint.White">

                <EditText
                    style="@style/EditText_Input.White"
                    android:hint="@string/username"/>

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#ffffff"
                android:layout_marginBottom="16dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_login_password"
                style="@style/TextInput.White"
                app:hintTextAppearance="@style/TextInputHint.White">

                <EditText
                    style="@style/EditText_Input.White"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#ffffff"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_login"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/login_cn"
        android:textColor="#fff"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_alert_cn"
            android:textSize="14sp"
            android:textColor="#fff"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#6563a4"
            android:textSize="14sp"
            android:text="@string/register_cn"/>

    </LinearLayout>

</LinearLayout>