<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@null"
    android:fastScrollEnabled="false"
    android:footerDividersEnabled="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:transcriptMode="normal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#cccccc" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:background="#fff">

            <ImageView
                android:id="@+id/iv_food"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:background="@mipmap/list_top_food" />

            <TextView
                style="@style/TextView_Group"
                android:text="@string/food" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#cccccc" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:background="#fff">

            <ImageView
                android:id="@+id/iv_work"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:background="@mipmap/list_top_work" />

            <TextView
                style="@style/TextView_Group"
                android:text="@string/work" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#cccccc" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:background="#fff">

            <ImageView
                android:id="@+id/iv_vacation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:background="@mipmap/login_bg" />

            <TextView
                style="@style/TextView_Group"
                android:text="@string/vacation" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#cccccc" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:background="#fff">

            <ImageView
                android:id="@+id/iv_outside"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:background="@mipmap/login_bg" />

            <TextView
                style="@style/TextView_Group"
                android:text="@string/outside" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>

